test/errors/type/list/count.yasl
mt.lookup([], .count)(true, 1)
